--- a/lesson 3/index.html
+++ b/lesson 3/index.html
@@ -5,15 +5,12 @@
     <meta charset="UTF8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Project_1</title>
 </head>
 
 <body>
  <p></p>
     <script src="index.js">    </script>
 </body>
-
-
-<h2></h2>
 
 </html>
